@@ -1,4 +1,7 @@
-5 Jan 2005; Preston Cody <codeman@gentoo.org>
+  07 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Added grp_install and services and fixed extra_packages to dialogfe
+
+  05 Jan 2005; Preston Cody <codeman@gentoo.org>
   Initial ChangeLog commit. Getting the FE to interact with the CC correctly
   lots of issues still to be resolved here.  also added a README
 
