@@ -1,11 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.26 2005/01/07 07:01:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.27 2005/01/07 07:02:47 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   07 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Initial move of partitioning code from ArchTemplate to x86Template.
+
+  07 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Added grp_install and services to InstallProfile
 
   07 Jan 2005; Preston Cody <codeman@gentoo.org>
   Fixed a few more edit_configs.  fixed a chroot multicommand bug thanks to agaffney.
